# GenesisEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/maps/: testmap.json  testmap.map
assets/shaders/: basic.frag  basic.vert  debug.frag  debug.vert  grid.frag  grid.vert  mesh.frag  mesh.vert
game/: Player.cpp  Player.h  main.cpp
src/: Map.h
src/camera/: Camera.cpp  Camera.h
src/core/: Engine.cpp  Engine.h  Logger.h  Time.h
src/gui/: Console.cpp  Console.h  DebugOverlay.cpp  DebugOverlay.h  GUIRenderer.cpp  GUIRenderer.h  GUITypes.h
src/gui/widgets/: Button.h  Checkbox.h  Label.h  Panel.h  Slider.h  TextField.h  Widget.h  Widgets.h
src/input/: GLFWInputBackend.cpp  GLFWInputBackend.h  IInputBackend.h  Input.h  InputManager.cpp  InputManager.h  InputTypes.h
src/map/: Brush.h  Map.h  MapLoader.cpp  MapLoader.h  MapRenderer.cpp  MapRenderer.h  MeshLibrary.h
src/math/: Math.h
src/physics/: Collider.h
src/player/: PlayerController.cpp  PlayerController.h
src/renderer/: DebugRenderer.cpp  DebugRenderer.h  Material.h  Mesh.h  Renderer.cpp  Renderer.h
src/renderer/material/: Material.cpp  Material.h  MaterialLibrary.cpp  MaterialLibrary.h  MaterialProperty.h
src/renderer/mesh/: Mesh.cpp  Mesh.h  MeshBuilder.h  MeshPrimitives.cpp  MeshPrimitives.h  VertexLayout.h
src/renderer/shader/: Shader.cpp  Shader.h
src/renderer/world/: StaticWorldRenderer.cpp  StaticWorldRenderer.h
src/world/: WorldCollision.h
